docker构建tomcat8+jdk1.8基础镜像，优化JVM